# portfolio-analytics-api

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_04_17_1801-60cb4048a50d_initial_schema.py  2026_04_18_1114-892486306834_init_schema.py  2026_04_18_1526-df4f4ee2a2d6_unique_portfolio_name_per_user.py
app/: main.py
app/api/: deps.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  asset.py  base.py  holding.py  portfolio.py  price_history.py  user.py
app/schemas/: asset.py  holding.py  portfolio.py  price_history.py  user.py
app/services/: auth_service.py  portfolio_service.py
