[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-portfolio-api"
version = "0.1.0"
description = "Finance portfolio analytics API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "psycopg>=3.3.3",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
[tool.setuptools.packages.find]
where = ["."]
include = ["app"]

[tool.ruff]
line-length = 120
src = ["app", "tests"]
target-version = "py314"

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


